test/error/MethodOverrideNormal.ci
abstract class Base
{
	public void Foo()
	{
	}
}

class Derived : Base
{
	public override void Foo() //ERROR: Base method is not abstract or virtual
	{
	}
}
